	* Fixed
		- Components can now carry arbitrary names and name duplication is handled
			properly.
		- Paths to songs and scripts are now properly saved relative to a
			`.h2playlist` file (in case the corresponding option was set).
		- Stop notes do now stop all notes of the same instrument at the same
			position (e.g. in chords or using multiple patterns).
	* Removed
		- Preferences options `restoreLastSong` and `restoreLastPlaylist` were
			dropped. Instead, both will always be restored automatically. In order to
			start with a blank song/playlist, load a new one before quitting.
		- Component mixer strips have been dropped.
		- LASH support has been dropped (#1649).

XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.5
	* Changed
		- The shortcut for starting/pausing transport can now be used spin boxed
			(like the BPM one) too (#2098).
		- Combo boxes do not accept focus (and preventing shortcuts) anymore.
		- LASH support has been deprecated and will be removed in version 2.0 of
      Hydrogen (#1649).
	* Fixed
		- Fix compilation with LASH support enabled (#2076).
		- Fix Hue slider in Preferences > Appearance > Color (#2081)
		- Show the Crash Reporter and exit with return code `1` on unhandled
			exceptions.
		- Fix crashes in SampleEditor (#2092).
		- Fix track names in multi track export. When using just the file extension,
			the raw instrument names will be used (#2096).

2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.4
	* Added
		- MIDI and OSC commands
				- `CLEAR_SELECTED_INSTRUMENT` - to remove all notes of the selected
				  pattern associated with the currently selected instrument.
				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
				- `INSTRUMENT_PITCH` - to adjust the pitch of an instrument.
		- OSC commands
				- `NOTE_ON` and `NOTE_OFF` which are handled like incoming MIDI events
				  without triggering their associated actions.